--- a/basic.html
+++ b/basic.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset= "utf-8">
-	<title></title>
+	<title>basic git tests</title>
 	<meta name= "" content= "">
-	<link rel= "stylesheet" href= "">
+	<link rel= "stylesheet" href= "somecss.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -16,6 +16,14 @@
 	</script>
 </head>
 <body>
+	<p>Some workds</p>
 
+	<ul>
+		<li>testing things.</li>
+		<li>testing things.</li>
+		<li>testing things.</li>
+		<li>testing things.</li>
+		<li>testing things.</li>
+	</ul>
 </body>
 </html>
